appId: com.myrights.app
---
- launchApp:
    clearState: true
- tapOn:
    text: "Skip"
- tapOn:
    text: "Guest"
- tapOn:
    text: "Tools"
- tapOn:
    text: "Document Generator"
- assertVisible:
    id: "document-generator-continue"
