appId: com.myrights.app
---
- launchApp:
    clearState: true
- tapOn:
    text: "Skip"
- tapOn:
    text: "Guest"
- tapOn:
    text: "Tools"
- tapOn:
    text: "Document Review"
- tapOn:
    text: "Add Document"
- assertVisible:
    text: "Add Document"
